Correção do vídeo.

--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@ style="width:483px;height:241px">
 <br>
 
 <!--Teaser Temporada 1-->
-<video width="483" height="241" controls>
-    <source src="https://www.youtube.com/watch?v=X4bF_quwNtw&t=2s.mp4" type="video.mp4">
-    <source src="https://www.youtube.com/watch?v=X4bF_quwNtw&t=2s.webm" type="video.webm">
-    Your browser does not support the video tag.
-</video>
+<iframe width="483" height="241" src="https://www.youtube.com/embed/X4bF_quwNtw" 
+title="YouTube video player" frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 
      </center>
 
