--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
 <!--Imagens-->
+<div>
 <img src="https://occ-0-2774-586.1.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABeFYtLG_NLWAlFT3z_IgAqvNy7j1-Y54dz8W-2vWI5pLl6ehREXrnsKhycRwArYvCwmOwFEwSoTDarrRXAmmSp01KEsNZCW3SR4J.jpg?r=f6c"
 alt="Elenco">
 
@@ -36,6 +37,7 @@ alt="Lucifer Morningstar">
 
 <img src="https://sm.ign.com/ign_br/screenshot/default/lucifer-6-ultima-temporada-tudo-sobre_3b3p.jpg" 
 alt="Chloe Decker E Lucifer Morningstar">
+</div>
 
 
 <div>
